<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="false_button">False</string>
    <string name="true_button">True</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest River in the Americas.</string>
    <string name="question_asia">Lake Baika is the world\'s oldest and deepest freashwater lake.</string>
    <color name="carrot">#e67e22</color>
    <color name="peter_river">#3498db</color>

//second xml file
    
    <string name="cheat_button">Cheat!</string>
    <string name="warning_text_view">Are you sure you want to do this?</string>

    <string name="show_answer_button">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong.</string>
</resources>
