<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/carrot"

    >

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="24dp"
            android:textSize="36sp"
            android:id="@+id/question_text_view" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
        android:text="@string/true_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/true_button"
        android:background="@color/peter_river"
        android:layout_margin="10dp"
            />

        <Button
            android:text="@string/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/false_button"
            android:background="@color/peter_river"
            android:layout_margin="10dp"
            />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:text="@string/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prev_button"
            android:drawableLeft="@drawable/arrow_left"
            android:drawablePadding="4dp"
            />

        <Button
            android:text="@string/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/next_button"
            android:drawableRight="@drawable/arrow_right"
            android:drawablePadding="4dp"
            />

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cheat_button"
        android:text="@string/cheat_button"

        />




    </LinearLayout>